In fact, we create user for sqs automagically.

--- a/.ebextensions/sqs.config
+++ b/.ebextensions/sqs.config
@@ -7,6 +7,30 @@ Resources:
         Fn::GetOptionSetting:
           OptionName: SQSVisibilityTimeout
           DefaultValue: 60
+  SQSUser:
+    Type: AWS::IAM::User
+  SQSPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Queues: [ { "Ref" : "LaravelSQSQueue" } ]
+      PolicyDocument:
+        Statement: [
+           {
+              "Sid": "FullAccess",
+              "Effect": "Allow",
+              "Principal": {
+                "AWS" : { "Fn::GetAtt" : [ "SQSUser", "Arn" ] }
+              },
+              "Action": [
+                 "sqs:*"
+              ],
+              "Resource": "*"
+           }
+        ]
+  SQSAccess:
+    Type: AWS::IAM::AccessKey
+    Properties:
+      UserName: { "Ref" : "SQSUser" }
 
 Outputs :
   LaravelQueueURL:
@@ -18,3 +42,9 @@ Outputs :
   LaravelQueueName :
     Description : "Name newly created SQS Queue"
     Value : { "Fn::GetAtt" : [ "LaravelSQSQueue", "QueueName"]}
+  SQSAccessKey:
+    Description: "The SQS access key"
+    Value: { "Ref" : "SQSAccess" }
+  SQSSecretKey:
+    Description: "The SQS secret"
+    Value: { "Fn::GetAtt" : [ "SQSAccess", "SecretAccessKey" ] }
