--- a/.ebextensions/sqs.config
+++ b/.ebextensions/sqs.config
@@ -10,7 +10,7 @@ Resources:
   SQSUser:
     Type: AWS::IAM::User
   SQSPolicy:
-    Type: AWS::S3::BucketPolicy
+    Type: AWS::SQS::QueuePolicy
     Properties:
       Queues: [ { "Ref" : "LaravelSQSQueue" } ]
       PolicyDocument:
