--- a/.ebignore
+++ b/.ebignore
@@ -20,7 +20,7 @@
 
 # Our ignores
 /.ebextensions/options.config.dist
-
+/web/.git
 
 
 # Laravel (as of 5.3).
@@ -32,3 +32,5 @@
 /web/Homestead.json
 /web/Homestead.yaml
 /web/.env
+
+
