--- a/.ebextensions/sqs.config
+++ b/.ebextensions/sqs.config
@@ -24,7 +24,9 @@ Resources:
               "Action": [
                  "sqs:*"
               ],
-              "Resource": "*"
+              "Resource":[
+                { "Fn::GetAtt" : [ "LaravelSQSQueue", "Arn"]}
+              ]
            }
         ]
   SQSAccess:
