Use REDIS as default istead of memcached. ElastiCache can have redis so ofcourse would we use redis.

--- a/.ebextensions/elasticache.config
+++ b/.ebextensions/elasticache.config
@@ -15,7 +15,7 @@ Resources:
       Engine:
            Fn::GetOptionSetting:
              OptionName : Engine
-             DefaultValue: memcached
+             DefaultValue: redis
       CacheSecurityGroupNames:
         - Ref: MyCacheSecurityGroup
   MyCacheSecurityGroup:
@@ -32,12 +32,7 @@ Resources:
 Outputs:
   ElastiCacheAddress:
     Description : "Address of elasticache servers"
-    Value : {"Fn::GetAtt": [ "MyElastiCache", "ConfigurationEndpoint.Address"]}
+    Value : {"Fn::GetAtt": [ "MyElastiCache", "RedisEndpoint.Address"]}
   ElastiCachePort:
     Description : "Port of elasticache servers"
-    Value : {"Fn::GetAtt": [ "MyElastiCache", "ConfigurationEndpoint.Port"]}
-option_settings:
-    "aws:elasticbeanstalk:customoption":
-        # Note! Currently, you can use Fn::GetAtt only with Memcached cache clusters.
-        ELASTICACHE_CLUSTER_ADDRESS: { "Ref": "ElastiCacheAddress" }
-        ELASTICACHE_CLUSTER_PORT: { "Ref": "ElastiCachePort" }
+    Value : {"Fn::GetAtt": [ "MyElastiCache", "RedisEndpoint.Port"]}
