--- a/.ebextensions/options.config.dist
+++ b/.ebextensions/options.config.dist
@@ -17,7 +17,6 @@ option_settings:
         APP_URL: "http://localhost"
         APP_KEY: "base64:JIiitjB44NCn3ymIb0c+ogKLl4J4i7sLC81LfrogM7s"
         DB_CONNECTION: "mysql"
-        MEMCACHED_PERSISTENT_ID: "app"
 
         # PHP configuration
         PHP_MEMORY_LIMIT: "1G"
@@ -32,7 +31,7 @@ option_settings:
         ElasticSearchInstanceType: "t2.micro.elasticsearch"
         CacheNodeType: cache.t2.micro
         NumCacheNodes: 1
-        Engine: memcached
+        Engine: redis
         SQSVisibilityTimeout: 90
         # SSL DOMAIN
         DomainName: ''
