--- a/.ebextensions/01_setup.config
+++ b/.ebextensions/01_setup.config
@@ -4,6 +4,12 @@ commands:
     command: 'echo Defaults:root \!requiretty >> /etc/sudoers'
 
 container_commands:
+  # Workaround so that Docker containers can access the parsed dynamic environment-variables
+  # E.g. env vars like S3_ACCESS_KEYS: '`{"Ref" : "MediaAccess"}`'. By default the Dockerfile will
+  # see this variable's value as `{"Ref" : "MediaAccess"}`, but in-fact it's value is e.g. DK32191230jfjefmqw12.
+  # This with help of a line in the Dockerfile and Dockerrun.aws.json volumes works.
+  # See Dockerrun.aws.json
+  # See https://github.com/peec/laravel-docker-aws/blob/master/Dockerfile#L93
   01create_mount_env:
     command: 'mkdir -p /tmp/envs'
     ignoreErrors: true
